[package]
name = "double-pendulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe = "0.25.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-futures = "0.4.40"
console_error_panic_hook = "0.1.7"

