[package]
name = "double-pendulum"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 2

[dependencies]
eframe = "0.25.0"
egui_plot = "0.25.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.40"
console_error_panic_hook = "0.1.7"
log = "0.4.20"

